--- a/front-end/my-app/src/index.css
+++ b/front-end/my-app/src/index.css
@@ -54,6 +54,9 @@ button {
     min-width: 300px;
     max-width: 800px;
     padding: 32px;
+    border-width: 100px;
+    border-color: #ececec;
+    border-style: 'solid';
 }
 
 .success {
